--- a/books/src/pages/index.astro
+++ b/books/src/pages/index.astro
@@ -1,41 +1,52 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Title from "../components/Title.astro";
+import ListOfBooks from "../components/ListOfBooks.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
+    <main class="m-auto max-w-4xl">
+        <Title/>
+        <ListOfBooks/>
+       <!-- <ul class="grid grid-cols-2 md:grid-cols-3 grap-3">
+            <li>
+                <a href="/clean-code">
+                    <img class="aspect-[200/300] h-full object-cover w-full max-w-full rounded-lg" src="http://"/>
+                </a>
+            </li>
+        </ul>-->
+
+        <!--<h1>Welcome to <span class="text-gradient">Astro</span></h1>
+        <p class="instructions">
+            To get started, open the directory <code>src/pages</code> in your project.<br />
+            <strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+        </p>
+        <ul role="list" class="link-card-grid">
+            <Card
+                href="https://docs.astro.build/"
+                title="Documentation"
+                body="Learn how Astro works and explore the official API docs."
+            />
+            <Card
+                href="https://astro.build/integrations/"
+                title="Integrations"
+                body="Supercharge your project with new frameworks and libraries."
+            />
+            <Card
+                href="https://astro.build/themes/"
+                title="Themes"
+                body="Explore a galaxy of community-built starter themes."
+            />
+            <Card
+                href="https://astro.build/chat/"
+                title="Community"
+                body="Come say hi to our amazing Discord community. ❤️"
+            />
+        </ul>-->
+    </main>
 </Layout>
 
-<style>
+<!--<style>
 	main {
 		margin: auto;
 		padding: 1.5rem;
@@ -47,7 +58,7 @@ import Card from '../components/Card.astro';
 		margin: 0;
 	}
 	.text-gradient {
-		background-image: var(--accent-gradient);
+		background-image: var(&#45;&#45;accent-gradient);
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
 		background-size: 400%;
@@ -56,7 +67,7 @@ import Card from '../components/Card.astro';
 	.instructions {
 		line-height: 1.6;
 		margin: 1rem 0;
-		border: 1px solid rgba(var(--accent), 25%);
+		border: 1px solid rgba(var(&#45;&#45;accent), 25%);
 		background-color: white;
 		padding: 1rem;
 		border-radius: 0.4rem;
@@ -64,13 +75,13 @@ import Card from '../components/Card.astro';
 	.instructions code {
 		font-size: 0.875em;
 		font-weight: bold;
-		background: rgba(var(--accent), 12%);
-		color: rgb(var(--accent));
+		background: rgba(var(&#45;&#45;accent), 12%);
+		color: rgb(var(&#45;&#45;accent));
 		border-radius: 4px;
 		padding: 0.3em 0.45em;
 	}
 	.instructions strong {
-		color: rgb(var(--accent));
+		color: rgb(var(&#45;&#45;accent));
 	}
 	.link-card-grid {
 		display: grid;
@@ -78,4 +89,4 @@ import Card from '../components/Card.astro';
 		gap: 1rem;
 		padding: 0;
 	}
-</style>
+</style>-->
