--- a/books/src/pages/[book].astro
+++ b/books/src/pages/[book].astro
@@ -25,7 +25,7 @@ if (!info) {
                     class="scale-50 font-black uppercase text-6xl md:text-8xl text-center py-8 px-4"
                     style="view-transition-name: book-title"
             >
-                Libros de
+                Libreria de
                 <span class="block text-[36px] md:text-[58px]">programación</span>
             </h1>
 
@@ -52,7 +52,18 @@ if (!info) {
 
             <aside class="mt-10 md:mt-0">
                 <h1 class="text-5xl font-black mb-4">{info.title}</h1>
-                <p class="text-lg mb-4">{info.opinion}</p>
+                <!--<div class="relative mb-4">
+                    &lt;!&ndash; Agregar el GIF como imagen de fondo con transparencia &ndash;&gt;
+                    <div
+                            class="absolute top-0 left-0 w-full h-full bg-black bg-opacity-100 rounded"
+                            style={{
+                                backgroundImage: `url(https://usagif.com/wp-content/uploads/gifs/book-72.gif)`,
+                                backgroundSize: 'cover',
+                                backgroundPosition: 'center',
+                            }}
+                    ></div>-->
+                    <p class="text-lg p-4 relative z-10">{info.opinion}</p>
+                </div>
                 <p><strong>Autor:</strong> <span class="font-semibold text-gray-800">{info.author}</span></p>
             </aside>
         </div>
