--- a/books/src/pages/[book].astro
+++ b/books/src/pages/[book].astro
@@ -61,9 +61,10 @@ if (!info) {
                                 backgroundSize: 'cover',
                                 backgroundPosition: 'center',
                             }}
-                    ></div>-->
+                    ></div>
                     <p class="text-lg p-4 relative z-10">{info.opinion}</p>
-                </div>
+                </div>-->
+                <p class="text-lg mb-4">{info.opinion}</p>
                 <p><strong>Autor:</strong> <span class="font-semibold text-gray-800">{info.author}</span></p>
             </aside>
         </div>
